--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                     <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a> -->
                 </div>
                 <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
-                    <button>Hire me</button>
+                    <a href="mailto:davileite.r13@gmail.com">
+                        <button>Hire me</button>
+                      </a>
                 </div>
             </div>
         </div>
