--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 </p>
 
                 <div class="social-links">
-                    <a href="https://github.com/DaviLeiteGit" data-aos="fade-up" data-aos-duration="1500"
+                    <a href="https://github.com/DaviLeiteGit" target="_blank" data-aos="fade-up" data-aos-duration="1500"
                         data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a> -->
-                    <a href="https://linkedin.com/in/davi-roberto-6a6a50232/" data-aos="fade-up"
+                    <a href="https://linkedin.com/in/davi-roberto-6a6a50232/"target="_blank" data-aos="fade-up"
                         data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
                     <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a> -->
                 </div>
