--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
                     <a href="mailto:davileite.r13@gmail.com">
-                        <button>Hire me</button>
+                        <button>Contact me</button>
                       </a>
                 </div>
             </div>
