fix: hamburg menu

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                         href="#services">Services</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a
                         href="#contact">Contact</a></div>
+                <!-- <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
+                    <label for="switch" class="switch">
+                        <input id="switch" type="checkbox" />
+                        <span class="slider"></span>
+                        <span class="decoration"></span>
+                    </label>
+
+                </div> -->
             </div>
             <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
         </div>
@@ -51,21 +59,24 @@
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">I'm a <span
                         class="typewriter-text"></span><label for="">|</label></div>
                 <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">
-                    Passionate about building smart, scalable web solutions. I turn ideas into code with a focus on performance, clean architecture, and real impact. I’m also deeply committed to creating secure applications and automating processes to optimize efficiency, ensuring that every solution is robust and resilient in the face of evolving cyber threats.
+                    Passionate about building smart, scalable web solutions. I turn ideas into code with a focus on
+                    performance, clean architecture, and real impact. I’m also deeply committed to creating secure
+                    applications and automating processes to optimize efficiency, ensuring that every solution is robust
+                    and resilient in the face of evolving cyber threats.
                 </p>
 
                 <div class="social-links">
-                    <a href="https://github.com/DaviLeiteGit" target="_blank" data-aos="fade-up" data-aos-duration="1500"
-                        data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/DaviLeiteGit" target="_blank" data-aos="fade-up"
+                        data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a> -->
-                    <a href="https://linkedin.com/in/davi-roberto-6a6a50232/"target="_blank" data-aos="fade-up"
+                    <a href="https://linkedin.com/in/davi-roberto-6a6a50232/" target="_blank" data-aos="fade-up"
                         data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
                     <!-- <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a> -->
                 </div>
                 <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
                     <a href="mailto:davileite.r13@gmail.com">
                         <button>Contact me</button>
-                      </a>
+                    </a>
                 </div>
             </div>
         </div>
