--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="home">
         <div class="main-container">
             <div class="image" data-aos="zoom-out" data-aos-duration="3000">
-                <img src="images/main.jpeg" alt="">
+                <img src="images/main.jpeg" alt="Image of Davi Leite">
             </div>
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hey I'm <span>Davi</span></h1>
